...
        val profiles = getProfilesUseCase()
        _state.update {
            it.copy(
                activities = activities,
                allProfiles = profiles,
                availableProfiles = profiles,
                loading = false
            )
        }
        if (errors.isNotEmpty())
            SnackbarController.sendEvent("Couldn't get ${errors.joinToString(" & ")}")
    }

...
            activity = state.value.selectedActivity,
            profile = state.value.selectedProfile,
            feel = state.value.selectedFeel,
            effort = state.value.selectedEffort
        )
        when (res) {
            is Result.Success -> SnackbarController.sendEvent("Activity updated")
            is Result.Failure -> SnackbarController.sendEvent("Unable to update activity")
        }
        _state.update { it.copy(loading = true) }
        callback()
    }
}
